# cs__xunit__dotnet

./: .gitignore  CMakeLists.txt  Program.cs  README.md  app__ray_tracer.sln  cs__xunit__dotnet.sln  ray_tracer_challenge.sln  ray_tracer_challenge.vcxproj  ray_tracer_challenge.vcxproj.filters  wip__cs__xunit.csproj  wip__cs__xunit.sln
data/: image.ppm
docs/: secrets.json.example
examples/: example__scene__gradient__bullseye.ppm  example__scene__pattern_stripe.ppm  example__scene__reflect_refract.ppm  example_artifact__specular.ppm  example_render.ppm  example_scene.ppm  example_scene_shadow.ppm
lib/Calculations/: CalculatorLibrary.cs
lib/Calculator/: Calculator.Test.cs  Calculator.cs  Calculator.csproj  Calculator.sln
lib/Calculator/Calculator/: Calculator.cs
lib/Config/: Config.cs  Config.csproj
lib/GildedRose-Refactoring-Kata/: GildedRose.cs  GildedRoseTest.cs  Program.cs
lib/ProjectMeta/: ProjectMeta.cs  ProjectMeta.sln
lib/ProjectMeta/ProjectMeta/: ProjectMeta.cs
lib/RayTracer/: ConstructiveSolidGeometry.cs  Form.Test.cs  Intersection.Test.cs  Intersection.cs  Light.Test.cs  Material.Test.cs  Matrix.Test.cs  Parser.Test.cs  Pattern.Test.cs  ProjectMeta.cs  Ray.Test.cs  RayTracer.Test.cs  RayTracer.csproj  Tuple.Test.cs  World.Test.cs
lib/RayTracer/src/: Camera.cs  Canvas.cs  Color.cs  Form.cs  Matrix.cs  Parser.cs  Ray.cs  RayTracer.cs  Tuple.cs  World.cs
src/: CMakeLists.txt  Calculator.cs  CalculatorCLI.cs  Camera.Test.cs  Camera.cs  Canvas.Test.cs  Canvas.cs  Color.Test.cs  Color.cs  Comparinator.Test.cs  Comparinator.cs  ConstructiveSolidGeometry.Test.cs  ConstructiveSolidGeometry.cs  Factor.cs  Factor__Test_Unit.cs  Fibonacci.cs  Fibonacci__Test_Unit.cs  Form.Test.cs  Form.cs  Intersection.Test.cs  Intersection.cs  Json.cs  Light.Test.cs  Light.cs  Material.Test.cs  Material.cs  Matrix.Test.cs  Matrix.cs  Multiple.cs  Multiple__Test_Unit.cs  Parser.Test.cs  Parser.cs  Pattern.Test.cs  Pattern.cs  Program.cs  ProjectMeta.cs  Ray.Test.cs  Ray.cs  RayTracer.cs  Tuple.Test.cs  (+67 more)
